--- a/app/views/settings/_sub_nav.html.erb
+++ b/app/views/settings/_sub_nav.html.erb
@@ -1,5 +1,5 @@
 <%= title @title %>
-<% sub_menu = { "basic" => "/settings", "avatar" => "/settings/avatar", "update_password" => "/settings/update_password",  "privacy" => "/settings/privacy", "invite" => "/settings/invite", "sync" => "/settings/sync" } %>
+<% sub_menu = { "basic" => "/settings", "avatar" => "/settings/avatar", "update_password" => "/settings/update_password",  "privacy" => "/settings/privacy", "invite" => "/settings/invite", "sync" => "/settings/syncs" } %>
 
 <div id="cu_user_menu" class="clearfix">
   <div class="info_menu">
