--- a/app/views/friends/sns.html.erb
+++ b/app/views/friends/sns.html.erb
@@ -1,3 +1,3 @@
-<% SNS_SERVERS.each do |sns_name| %>
+寻找可能认识的好友：<% SNS_SERVERS.each do |sns_name| %>
   <%= link_to sns_name, '/friends/sync?sns_name=' + sns_name %>
 <% end %>
