--- a/app/assets/stylesheets/users.css.scss
+++ b/app/assets/stylesheets/users.css.scss
@@ -1,9 +1,3 @@
-.item {margin:0 0 10px 0;}
-.item span {margin-left:5px;color:#999;}
-.signup label {display:inline-block;float:left;width:100px;line-height:19px;text-align:right;margin:0 10px 0 0;color:#333;}
-.signup .text {float:left;display:inline-block;width:200px;}
-.basic-input {width:200px;}
-.captcha {width:95px;}
-.signup_step {margin:0 0 20px 0;}
-.information_box table td, .information_box table th {padding:5px 10px;}
-.information_box table th {text-align:right;width:90px;}
+// Place all the styles related to the users controller here.
+// They will automatically be included in application.css.
+// You can use Sass (SCSS) here: http://sass-lang.com/
