--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,55 +1,21 @@
-<div id="main_t" class="clearfix">
-	<h1>马上加入Patrick!</h1>
-	<div class="clear"></div>
-</div>
+<h2>注册</h2>
 
-<div id="leftcol" class="mr50">
-	<div class="signup">
-		<div class="signup_step">
-			<%= image_tag "base/signup_set1.jpg", :alt => "填写信息", :width => "620", :height => "40" %>
-		</div>
+<%= form_for(resource, :as => resource_name, :url => registration_path(resource_name), :validate => true ) do |f| %>
+  <%= devise_error_messages! %>
 
-		<%= form_for(@user, :url => registration_path(resource_name), :validate => true ) do |f| %>
-		<%= devise_error_messages! %>
+  <div><%= f.label :email %><br />
+  <%= f.email_field :email, :validate => true %></div>
 
-		<div class="item">
-			<%= f.label :email %>
-			<%= f.email_field :email, :class => "text basic-input", :validate => { :presence => true, :uniqueness => true}  %>
-			
-			<span>用来登陆Patrik，接受到激活邮件才能完成注册</span>
-		</div>
-		<div class="item">
-			<%= f.label :password %><%= f.password_field :password, :class => "text basic-input", :validate => { :presence => true, :confirmation => true } %><span>字母、数字或符号，最短6个字符，区分大小写</span>
-		</div>
-		<div class="item">
-			<%= f.label :password_confirmation %><%= f.password_field :password_confirmation, :class => "text basic-input" %><span>&nbsp;</span>
-		</div>
-		<div class="item">
-			<%= f.label :username %><%= f.text_field :username, :class => "text basic-input" %><span>中英文均可，最长7个英文或14个汉字</span>
-		</div>
-		<div class="item">
-			<label>&nbsp;</label>
-				<%= f.check_box :agree_term %>
-				<%= link_to "我已阅读并同意使用条款", "/private" %>
-			</div>
-			<div class="item-submit">
-				<label>&nbsp;</label>
-				<%= link_to "javascript:void(0)", :class => "button_red" do  %>
-				<span>立即注册</span>
-				<% end %>
+  <div><%= f.label :username %><br />
+  <%= f.text_field :username %></div>
 
-				<script type="text/javascript" charset="utf-8">
-				$('a.button_red').click(function(){
-					$("form#new_user").submit();
-					return false;
-				});
-				</script>
+  <div><%= f.label :password %><br />
+  <%= f.password_field :password, :validate => { :presence => true, :confirmation => true } %></div>
 
-			</div>
-			<% end %>
+  <div><%= f.label :password_confirmation %><br />
+  <%= f.password_field :password_confirmation %></div>
 
-		</div>
-	</div>
-	<%= render "users/text_info" %>
-	<div class="clear"></div>
+  <div><%= f.submit "注册" %></div>
+<% end %>
 
+<% #=  render "links" %>
