--- a/app/views/settings/avatar.html.erb
+++ b/app/views/settings/avatar.html.erb
@@ -1,33 +1,76 @@
 <%= render "sub_nav", :action => params[:action]  %>
-<%= render_stickies %>
 
-<% unless current_user.avatar.blank? %>
-<%= image_tag current_user.avatar_url(:large), id: "cropbox" %>
+<div class="settings avatar">
+  <div class="left">
+    <%= render_stickies %>
 
-<br />
-<br />
-<h4>预览</h4>
-<div style="width:50px; height:50px; overflow:hidden">
-	<%= image_tag current_user.avatar.url(:large), :id => "preview" %>
+    <table border="0" cellspacing="20" cellpadding="5">
+      <tr>
+        <td valign="middle">
+          从电脑上传（支持JPG、GIF、PNG图片格式，且小于5M）<br />
+          <%= form_for current_user, :url => url_for(:action => :avatar), :html => { :multipart => 'true' } do |f| %>
+          <%= f.file_field :avatar, :align => "center" %>
+          <br />
+          <br />
+          <%= image_submit_tag "v2/save_avatar.png", :align => "center" %>
+<% end %>
+</td>
+</tr>
+
+<tr>
+  <td>
+    <% if current_user.avatar.blank? %>
+      <%= image_tag "v2/avatar_default_bg.png" %>
+
+    <% else %>
+      <%= image_tag current_user.avatar_url(:origin), id: "cropbox" %>
+
+    <% end %>
+
+    <%= form_for current_user, :url => url_for(:action => :avatar), :method => :post  do |f| %>
+      <% %w[x y w h].each do |attribute| %>
+        <%= f.hidden_field "crop_#{attribute}" %>
+      <% end %>
+      <br />
+
+      <%= image_submit_tag "v2/save_avatar_2.png", :align => "center" %>
+      <%= link_to "取消", { :action => "basic" }, :class => "red" %>
+
+    <% end %>
+  </td>
+</tr>
+<tr>
+  <td></td>
+</tr>
+</table>
+
+
 </div>
 
-<%= form_for current_user, :url => url_for(:action => :avatar), :method => :post  do |f| %>
-<% %w[x y w h].each do |attribute| %>
-<%= f.hidden_field "crop_#{attribute}" %>
-<% end %>
-<div class="actions">
-	<%= f.submit "保存" %>
+<div class="right">
+  <p> 您上传的头像会自动生成以下三种尺寸，请确保中小尺寸的头像是否清晰。</p>
+  <div class="clear">
+  </div>
+  <table border="0" cellspacing="5" cellpadding="5">
+    <tr>
+      <td>
+        <%= image_tag  "v2/user_large_example.png", :align => "left", :class => "preview_large" %>  大图 <i> 130x130px</i>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <%= image_tag  "v2/user_middle_example.png", :align => "left", :class => "preview_middle" %> 中图 <i> 50x50px</i>
+      </td>
+    </tr>
+    <tr>
+      <td>
+        <%= image_tag "v2/user_thumb_example.png", :align => "left", :class => "preview_thumb" %>   小图 <i> 30x30px</i>
+      </td>
+    </tr>
+  </table>
+
 </div>
-<% end %>
 
-<% else %>
-<p> 快来上传你的头像吧! </p>
-<% end %>
-
-
-
-<%= form_for current_user, :url => url_for(:action => :avatar), :html => { :multipart => 'true' } do |f| %>
-<%= f.file_field :avatar %>
-<%= f.submit %>
-<% end %>
+<!-- settings end -->
+</div>
 
