--- a/app/views/settings/update_password.html.erb
+++ b/app/views/settings/update_password.html.erb
@@ -1,14 +1,30 @@
 <%= render "sub_nav", :action => params[:action]  %>
-<%= render_stickies %>
-<%= form_for @user, :validate => true, :url => url_for(:action => :update_password ), :html => { :method => :put } do |f| %>
+
+<div class="settings update_password">
+  <%= render_stickies %>
+  <%= form_for @user, :validate => true, :url => url_for(:action => :update_password ), :html => { :method => :put } do |f| %>
 
   <%= f.hidden_field :reset_password_token %>
 
-  <div><%= f.label :password, "新密码" %><br />
-  <%= f.password_field :password %></div>
+  <table border="0" cellspacing="15" cellpadding="5">
+    <tr>
+      <td class="label"><%= f.label :password, "新密码" %></td>
+      <td  class="text_input"> <%= f.password_field :password %></td>
+    </tr>
+    <tr>
+      <td class ="label"><%= f.label :password_confirmation %></td>
+      <td class="text_input"><%= f.password_field :password_confirmation %></td>
+    </tr>
+    <tr>
+      <td></td>
+      <td class="submit">
+        <%= image_submit_tag "v2/button/submit_red.png", :align => "center" %>
+        <%= link_to "取消", {:action => "basic"}, :class => "red", :align => "center"  %>
+      </td>
+    </tr>
+  </table>
 
-  <div><%= f.label :password_confirmation %><br />
-  <%= f.password_field :password_confirmation %></div>
-
-  <div><%= f.submit "更新密码" %></div>
 <% end %>
+
+<!-- .settings end -->
+</div>
