--- a/app/views/static/index.html.erb
+++ b/app/views/static/index.html.erb
@@ -11,7 +11,7 @@
 <div id="waterfall_outer"  style="position: relative;" >
   <% (1..14).each do |i| %>
     <div class="ks-waterfall">
-    <a class="wine_profile" href="/wines/preview">
+    <a class="wine_profile  fancybox.iframe" href="/wines/preview">
     <%= image_tag "v2/test/w#{i}.png", :title => "title", :class => "class" %>
     </a>
     </div>
