Bugs fixed with sign up.
Signed-off-by: Weston <weixuhong@gmail.com>

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -46,9 +46,9 @@
       <% end %>
 
       <script type="text/javascript" charset="utf-8">
-        $('a.button_green').click(function(){
+        $('a.button_green').click(function(event){
+		event.preventDefault();
         $("form#new_user").submit();
-        return false;
         });
       </script>
 
