--- a/app/views/friends/sns.html.erb
+++ b/app/views/friends/sns.html.erb
@@ -1,3 +1,3 @@
-寻找可能认识的好友：<% SNS_SERVERS.each do |sns_name| %>
-  <%= link_to sns_name, '/friends/sync?sns_name=' + sns_name %>
+取消绑定：<% @available_sns.each do |key, sns| %>
+  <%= link_to sns.sns_name, '/friends/delete_sns?sns_name=' + sns.sns_name %>
 <% end %>
