--- a/app/views/friends/find.html.erb
+++ b/app/views/friends/find.html.erb
@@ -21,7 +21,7 @@
     <% end %>
     <div class="buttons">
       <%= link_to_button "search_all_syncs", "/" %>
-      <%= link_to_button "syncs_settings", "/" %>
+      <%= link_to_button "syncs_settings", "/friends/sns" %>
     </div>
     <!-- .box end -->
   </div>
