--- a/app/views/friends/_icons.html.erb
+++ b/app/views/friends/_icons.html.erb
@@ -1,4 +1,11 @@
 
-<%= link_to_icon "sina", APP_DATA["friends"]["oauth"]["authorize_url"]["sina"] %>
-<%= link_to_icon "qq", APP_DATA["friends"]["oauth"]["authorize_url"]["qq"] %>
-<%= link_to_icon "douban", APP_DATA["friends"]["oauth"]["authorize_url"]["douban"] %>
+  <% SNS_SERVERS.each do |sns_name| %>
+    
+    <% if @availabe_sns[sns_name].present? %>
+      <%= link_to_sns_icon true, sns_name, '/friends/sync?sns_name=' + sns_name %>
+    <% else %>
+      <%= link_to_sns_icon false, sns_name, '/friends/sync?sns_name=' + sns_name %>
+    <% end %>
+    
+  <% end %>
+  
