--- a/app/views/mine/index.html.erb
+++ b/app/views/mine/index.html.erb
@@ -36,33 +36,38 @@
     </div>
     <!-- left end -->
   </div>
-
   <div class="right">
     <div class="box box_1  user_follows" >
-      <h3>关注的人<span class="font_12"><%= link_to "(12支, 更多)", :controller => "/mine/cellars" %></span> </h3>
-      <%= render "mine/share/user_list", :wine => @wine_collections %>
+      <h3>关注的人<span class="font_12">
+        <%= link_to "("+@followings.length.to_s+"人, 更多)", :controller => "/mine/cellars" %></span> 
+      </h3>
+      <% if @followings.present? %>
+      <%= render "mine/share/following_list", :items => @followings %>
+      <% else %>
+      你还没还有关注任何人！
+      <% end %>
       <!-- .box end -->
-     </div>
-
+    </div>
     <div class="clear"></div>
-
     <div class="box box_2  user_followed" >
-      <h3>粉丝<span class="font_12"><%= link_to "(12支, 更多)", :controller => "/mine/cellars" %></span> </h3>
-      <%= render "mine/share/user_list", :wine => @wine_collections %>
+      <h3>粉丝<span class="font_12">
+        <%= link_to "("+@followers.length.to_s+"人, 更多)", :controller => "/mine/cellars" %></span> 
+      </h3>
+      <% if @followings.present? %>
+      <%= render "mine/share/follower_list", :items => @followers  %>
+      <% else %>
+      你还没还有关注任何人！
+      <% end %>
       <!-- .box end -->
-     </div>
-
+    </div>
     <div class="clear"></div>
-
     <div class="box box_3  event_follows" >
       <h3>关注的活动<span class="font_12"><%= link_to "(12支, 更多)", :controller => "/mine/cellars" %></span> </h3>
-      <%= render "mine/share/user_list", :wine => @wine_collections %>
+      <%= render "mine/share/event_list", :items => []  %>
       <!-- .box end -->
-     </div>
-
+    </div>
     <!-- right end -->
   </div>
   <!-- .mine end -->
 </div>
-
 <div class="clear"></div>
