--- a/app/views/mine/index.html.erb
+++ b/app/views/mine/index.html.erb
@@ -31,7 +31,7 @@
 
     <div class="box box_4 simple_comments">
       <h3>评论<span class="font_12"><%= link_to "(12支, 更多)", :controller => "/mine/cellars" %></span> </h3>
-      <%= render @simple_comments %>
+      <%= render @comments %>
       <!-- .box end -->
     </div>
     <!-- left end -->
