--- a/app/views/mine/_sub_nav.html.erb
+++ b/app/views/mine/_sub_nav.html.erb
@@ -2,10 +2,10 @@
      "cellars"          => "/mine/cellars",
      "wine_follows"     => "/mine/wine_follows",
      "winery_follows"   => "/mine/winery_follows",
-     "simple_comments"  => "/mine/simple_comments",
-     "detail_comments"  => "/mine/detail_comments",
+     "comments"  => "/mine/comments",
+     "testing_notes"  => "/mine/testing_notes",
      "user_follows"     => "/mine/user_follows",
-     "user_followeds"    => "/mine/user_followeds",
+     "user_followers"    => "/mine/user_followers",
      "albums"           => "/mine/albums" } %>
 
 <div id="cu_user_menu" class="clearfix relative">
