--- a/app/views/mine/share/_wine_follows.html.erb
+++ b/app/views/mine/share/_wine_follows.html.erb
@@ -1,5 +1,5 @@
 <% (1..10).each do |i| %>
-  <div class="item relative">
+  <div class="item relative dotted">
     <div class="pic">
       <%= image_tag "v2/test/m_w_3.png", :title => "title", :class => "class" %>
     </div>
