--- a/app/views/mine/user_followers.html.erb
+++ b/app/views/mine/user_followers.html.erb
@@ -4,9 +4,8 @@
 
   <div class="left">
     <div class="box box_1">
-      <h3>关注的人 <span class="font_12">(共 12 人)</span> </h3>
-
-      <%= render "mine/share/user_follows" %>
+      <h3>粉丝 <span class="font_12">(共 12 人)</span> </h3>
+      <%= render "mine/share/user_followers" %>
       <div class="clear"></div>
       <!-- pagination start  -->
       <div class="pagination">
